Pre-alpha is ready for testing

--- a/config.yaml
+++ b/config.yaml
@@ -3,18 +3,20 @@
 
 formats:
     # Formats are ignored by youtube-autodl, but they can be referenced later in the config file.
-    # The formats here are explained in more detail in the youtube-dl man page under OUTPUT TEMPLATE.
+    # The formats here are explained in more detail in the youtube-dl man page under OUTPUT TEMPLATE. For strings, only the %(blah)s formatter is supported (s)
     - &archive "archive/youtube_%(id)s.%(ext)s" # the default config references this format, so don't delete it. if you don't want an archive, instead set options.archive.all=false
     - &by_playlist "youtube/%(channel)s/%(playlist)s/%(title)s-%(id)s.%(ext)s"
     - &by_channel "youtube/%(channel)s/all/%(title)s-%(id)s.%(ext)s"
     - &to_watch "to_watch/%(upload_date)s %(channel)s - %(title)s - %(id)s.%(ext)s"
     - &to_watch_long "to_watch_long/%(upload_date)s %(channel)s - %(title)s - %(id)s.%(ext)s"
     - &to_binge "to_binge/%(upload_date)s %(channel)s - %(title)s - %(id)s.%(ext)s"
+    - &testing "testing_unsanitary/%(title)s.%(ext)s"
+    - &testing_sanitary "testing_sanitary/%(title)S.%(ext)s"
 options:
     # All video format paths and other paths are relative to this directory
     directory: ~/video
     # Database location (can be safely deleted, cache only)
-    database: "/home/zachary/youtube-auto-dl/.cache.sqlite"
+    database: "/home/zachary/youtube-autodl/.cache.sqlite"
     # How often should we see if there are new videos to download? We skip playlists checked more recently than this.
     refresh_period: 3600 # Hourly is OK.
     # youtube-autodl is designed to download videos forever. to use it as a feed reader instead, modify the section below.
@@ -51,6 +53,19 @@ options:
 watchlist:
     # channel, playlist, video are all valid options. 'search' is planned but doesn't work yet.
     # in addition, youtube-dl options can be given (ex. video must be longer than or shorter than X)
+    - name: Single quote
+      video: https://www.youtube.com/watch?v=yFqFLo_bYq0
+      save: [*testing, *testing_sanitary]
+    - name: Forward slash
+      video: https://www.youtube.com/watch?v=8P-kVeviv10
+      save: [*testing, *testing_sanitary]
+    - name: Double quotes
+      video: https://www.youtube.com/watch?v=q5lJ4x68vdw
+      save: [*testing, *testing_sanitary]
+    - name: Unicode
+      video: https://www.youtube.com/shorts/396_3HvvkNc
+      save: [*testing, *testing_sanitary]
+
     - name: Applied Science
       channel: https://www.youtube.com/user/bkraz333
       note: Ben Krasnow
@@ -65,7 +80,7 @@ watchlist:
     - name: Ben Eater
       channel: https://www.youtube.com/user/eaterbc
       save: [*archive, *by_channel, *to_watch]
-      save_playlists: [*by_playlist]
+      save_playlists: [*by_playlist] # This fetches all the playlists for a channel. Unless you grab videos by playlist, the %(playlist)s formatter can't be used. Fetching things by playlist lets us put them in a folder by playlist, etc.
     - name: Binging With Babbish
       playlist: https://www.youtube.com/watch?v=ek5OogQFaAg&list=PLopY4n17t8RCqmupsW66yOsR5eDPRUN_y
       save: [*archive, *by_playlist, *to_binge]
